--- a/Lasso_Regression/key_points.ipynb
+++ b/Lasso_Regression/key_points.ipynb
@@ -227,6 +227,70 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Objective} = \\text{RSS} + \\lambda \\sum_{j=1}^{p} |\\beta_j| $$\n",
+    " $$ \\sum_{j=1}^{p} |\\beta_j| $$\n",
+    "The reason behind Lasso's ability to create sparsity can be understood from the mathematical formulation of the Lasso penalty term and its effect on the optimization problem during model training.\n",
+    "\n",
+    "In Lasso regression, the objective function to minimize is given by:\n",
+    "\n",
+    "$$ \\text{Objective} = \\text{RSS} + \\lambda \\sum_{j=1}^{p} |\\beta_j|$$\n",
+    "\n",
+    "where:\n",
+    "- RSS (Residual Sum of Squares) is the sum of squared differences between the actual target values and the predicted values.\n",
+    "- \\(\\beta_j\\) represents the coefficients of the regression model for each feature \\(j\\).\n",
+    "- \\(p\\) is the total number of features (predictors) in the model.\n",
+    "- \\(\\lambda\\) is the regularization parameter that controls the strength of the L1 penalty. It balances the trade-off between fitting the data well (minimizing RSS) and keeping the coefficients small (minimizing the penalty term).\n",
+    "\n",
+    "The L1 penalty term $$ \\sum_{j=1}^{p} |\\beta_j|\\ $$ is the sum of the absolute values of the coefficients. It plays a crucial role in creating sparsity in the model. Here's why:\n",
+    "\n",
+    "1. Geometric Interpretation:\n",
+    "The L1 penalty term creates a diamond-shaped constraint region in the coefficient space. The corners of the diamond occur when one or more coefficients are exactly zero. Each corner of the diamond corresponds to a sparse solution with some features being completely excluded from the model (i.e., having zero coefficients).\n",
+    "\n",
+    "2. Optimizing the Objective Function:\n",
+    "During the model training process, the objective is to minimize the combined loss function (RSS) and the L1 penalty. As \\(\\\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lasso Regression creates sparsity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for lasso resgression\n",
+    "$$ m = \\frac{ \\sum (y - \\bar{y})(x - \\bar{x}) \\pm  \\lambda} {\\sum (x - \\bar{x})^2} $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for ridge regression\n",
+    "$$ m = \\frac{\\sum (y - \\bar{y})(x - \\bar{x})}{\\sum (x - \\bar{x})^2 + \\lambda} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both Lasso and Ridge regression introduce regularization to the linear regression model, but they achieve sparsity differently. Lasso can drive some coefficients to exactly zero, producing a sparse model and facilitating feature selection. Ridge regression, on the other hand, can shrink coefficients without setting them to zero, providing more stability and reducing the impact of irrelevant features while still retaining all the input variables in the model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
