--- a/Decision_Tree/regression_tree.ipynb
+++ b/Decision_Tree/regression_tree.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,17 @@
        "(506, 14)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(506, 13)"
+      ]
+     },
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +285,9 @@
     "df.shape\n",
     "\n",
     "X = df.iloc[:,0:13]\n",
-    "y = df.iloc[:,13]\n"
+    "y = df.iloc[:,13]\n",
+    "\n",
+    "X.shape\n"
    ]
   },
   {
@@ -346,6 +358,45 @@
    ],
    "source": [
     "r2_score(y_test,y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import KFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kf = KFold(n_splits=5,shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.70264315,  0.72858884,  0.67226285,  0.4322949 , -1.47396468])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(rt,X,y)"
    ]
   },
   {
